Commit 9: Create an API to delete the user.
